# DFT

./: .gitignore  CMakeLists.txt  Chem179-HW06.ipynb  Chem179-HW06.tex  README.md  build.sh  clean.sh  interactive.sh  test.sh
atoms/: H.xyz  H2.xyz  H2_stretch.xyz  He.xyz
input/: H.json  H2.json  H2_stretch.json  He.json
output/: H.hdf5
sample_input/: H.json  H2.json  H2_stretch.json  He.json
sample_output/hw6_1/: H_T_Vext.txt  H_T_Vext_Vhartree.txt  H_T_Vext_Vhartree_Vxc.txt  He_T_Vext_Vhartree.txt  He_T_Vext_Vhartree_Vxc.txt
src/: CMakeLists.txt  CNDO2.hpp  GAO.hpp  bracket.hpp  dft.cpp  dft.hpp  extended_huckel.hpp  header_file.hpp  hw1_1.cpp  hw2_1.cpp  hw2_2.cpp  hw3_1.cpp  hw4_1.cpp  hw5_2.cpp  hw6_1.cpp  lennard_jones.hpp  quad.hpp  simulation.hpp  tools.hpp
student_output/hw6_1/: H.hdf5  H2_T_Vext_Vhartree_Vxc.txt  H2_stretch_T_Vext_Vhartree_Vxc.txt  H_T_Vext_Vhartree_Vxc.txt  He.hdf5  He_T_Vext_Vhartree_Vxc.txt
